--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.8.1",
         "laravel-precognition-vue-inertia": "^0.5.2",
         "moment": "^2.29.4",
         "primeicons": "^6.0.1",
